--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serverless-iam-roles-per-function": "^3.2.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1359.0"
+    "aws-jwt-verify": "^3.0.0",
+    "aws-sdk": "^2.1115.0"
   }
 }
